# CyberOracle

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  alert.py  audit.py  ioc.py  threat.py  user.py
backend/app/schemas/: alert.py  auth.py  intelligence.py  threat.py
backend/app/services/: ai_threat_simulator.py  copilot.py  intelligence.py  mitre.py  scoring.py  threat_engine.py
backend/app/websocket/: handlers.py  manager.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/dashboard/: GlobeMap.tsx  (+5 more)
frontend/src/lib/: api.ts  hooks.ts  utils.ts  websocket.ts
frontend/src/stores/: index.ts
frontend/src/types/: index.ts
infra/: .env.example  docker-compose.yml
infra/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker
infra/nginx/: nginx.conf
ml/: requirements.txt
ml/models/: anomaly_detector.py  attack_clusterer.py  log_analyzer.py  phishing_detector.py  threat_classifier.py
ml/utils/: __init__.py
workers/: celery_app.py
workers/tasks/: __init__.py  alert_pipeline.py  feed_ingestion.py  ioc_enrichment.py  threat_scoring.py
(+27 files in other folders)
